[openrewrite] `migrate.util.JavaUtilAPIs`