@@ -280,7 +280,7 @@ public final class IdeaStep {
 			}
 			builder.add("-charset").add("UTF-8");
 			builder.add(ThrowingEx.get(file::getCanonicalPath));
-			return builder.build().collect(Collectors.toList());
+			return builder.build().toList();
 		}
 
 		private FormatterFunc.Closeable toFunc() {
